--- a/index.html
+++ b/index.html
@@ -1,60 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Velikonoce</title>
- </head>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #11e2ee;
-     }
+<html>
 
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
 
-    .header {
-      text-align: center;
-      padding: 20px 0;
-      background-color: #bf94b7; 
-    }
-
-    .pozadi {
-      background-color: #13ec9f; 
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    }
-
-
-    .velikonocni-vajicko {
-      width: 100px;
-      height: 150px;
-      background-color: #e1f1ef; 
-      border-radius: 50%;
-      margin: 0 auto;
-      margin-top: 20px;
-      position: relative;
-    }
-
-  </style>
 <body>
-<div class="container">
-  <header class="header">
-    <h1>Vitejte u Pana Vajicka</h1>
-  </header>
-  <main class="pozadi">
-    <h2>VESELE VELIKONOCE!</h2>
-    <p>Snad dostanete hodne vajicek a pokud jste holka tak vas je mi lito</p>
-    <div class="velikonocni-vajicko"></div>
-    <p><center>tvurce: Hung Kudrna</center></p>
-  </main>
-</div>
+ <a href="bababa.html">bababa</a>
+ <a href="cat.html">cat</a>
+ <a href="kitty.html">kitty</a>
+ <a href="meow.html">meow</a>
 </body>
+
 </html>
